Essay/Code/Full_code/FQHE_SPHERE/core/Hilbertspace/QHFMFermion/Hamiltonian/Hamiltonian.h

extern "C" size_t L2Z2Generate(MKL_INT *indptr, MKL_INT *indices, Data_dtype *data, int num_thread);
//--------------------------------------------------------------------------------------------------------------------
//-------------------------<L2_Z2PH.c>-------------------------------------------------------------------
//--------------------------------------------------------------------------------------------------------------------

extern "C" size_t L2Z2PHCount(MKL_INT *indptr, int num_thread);
extern "C" size_t L2Z2PHGenerate(MKL_INT *indptr, MKL_INT *indices, Data_dtype *data, int num_thread);
extern "C" size_t n00ACount(MKL_INT *indptr, Data_dtype *A_matirx, int num_thread);
extern "C" size_t n00AGenerate(Data_dtype *A_matirx, MKL_INT *indptr, MKL_INT *indices, Data_dtype *data, int num_thread);
extern "C" size_t D00ACount(MKL_INT *indptr, Data_dtype *A_matirx, Data_dtype *B_matirx, int num_thread);
extern "C" size_t D00AGenerate(Data_dtype *A_matirx, Data_dtype *B_matirx, Data_dtype *A_list, 
											MKL_INT *indptr, MKL_INT *indices, Data_dtype *data, int num_thread);
extern "C" void D00AOp(Data_dtype *A_matirx, Data_dtype *B_matirx, Data_dtype *A_list, Data_dtype *vec, Data_dtype *resu, int num_thread);
extern "C" void nl0AOp(Data_dtype *A_matirx, Data_dtype *vec, Data_dtype *resu, int l, int num_thread);
// daggerQ: 
//          0: a_{m-m_1}a_{m_1}  
//          1: a_{m_1}^daggera_{m-m_1}^dagger
extern "C" void pairingOp(Data_dtype *A_list, Data_dtype *A_matirx, Data_dtype *vec, Data_dtype *resu, int l, int m, 
                            int daggerQ, int num_thread);
extern "C" void pairingABlmOp(Data_dtype *A_matirx, Data_dtype *B_matirx, Data_dtype *A_list, Data_dtype *vec, Data_dtype *resu, 
                                int l, int m, int la, int lb, int num_thread);
extern "C" void twoOpGeneral(Data_dtype *A_matirx, Data_dtype *A_list, Data_dtype *vec, Data_dtype *resu, int m, int num_thread);
//--------------------------------------------------------------------------------------------------------------------
//-------------------------<lineDefect.c>-------------------------------------------------------------------
//--------------------------------------------------------------------------------------------------------------------

extern "C" size_t defectLineGenerate(MKL_INT *indptr, MKL_INT *indices, Data_dtype *data, double *A1_list, double *A12_list, double *cdw, double* defect_list, double t, int num_thread);