Essay/Code/Full_code/FQHE_SPHERE/core/Hilbertspace/QHFMFermion/QHFM_fermion.h

extern "C" int create_delta_AwithNo(double *A_list2, int l, int m, int N_o, int num_thread);
extern "C" int create_deltadelta_ABwithNo(double *A_list2, int l, int m, int la, int lb, int N_o, int num_thread);
extern "C" int create_nlm_AwithNo(double *A_list2, int l, int m, int N_o, int num_thread);