Essay/Code/Full_code/FQHE_SPHERE/core/Hilbertspace/QHFMFermion/Basis/Basis.h

//--------------------------------------------------------------------------------------------------------------------
//-------------------------<density.c>-------------------------------------------------------------------
//--------------------------------------------------------------------------------------------------------------------


int density(Data_dtype *ket, Data_basis *basis, double *out, size_t N_e, size_t dim);
extern "C" int meausre_density(Data_dtype *ket, double *out);
extern "C" int meausre_sigma_x(Data_dtype *ket, Data_dtype *out);
extern "C" int meausre_Z2(Data_dtype *ket, Data_dtype *out);
extern "C" int meausre_PH(Data_dtype *ket, Data_dtype *out);
extern "C" int meausre_PH_inZ2space(Data_dtype *ket, Data_dtype *out);
//--------------------------------------------------------------------------------------------------------------------
//-------------------------<transformation.c>-------------------------------------------------------------------
//--------------------------------------------------------------------------------------------------------------------

extern "C" void LzZ2PH_to_Lz(const Data_dtype* LzZ2PH_ket, Data_dtype* Lz_ket, int num_thread);