Essay/Code/Full_code/FQHE_SPHERE/core/Hilbertspace/QHFMFermion/QHFMFermion_wrapper.py


#extern "C" size_t L2Z2Generate(MKL_INT *indptr, MKL_INT *indices, Data_dtype *data, int num_thread);
cf_fqhe.L2Z2Generate.argtypes = [
			np.ctypeslib.ndpointer(dtype=indtype, ndim=1,flags='C_CONTIGUOUS'),
			np.ctypeslib.ndpointer(dtype=indtype, ndim=1,flags='C_CONTIGUOUS'),
			np.ctypeslib.ndpointer(dtype=gdtype, ndim=1,flags='C_CONTIGUOUS')]
cf_fqhe.L2Z2Generate.restype = c_size_t
L2Z2Generate = cf_fqhe.L2Z2Generate

#--------------------------------------------------------------------------------------------------------------------
#---------------------------<Hamiltonian/L2_Z2PH.c>--------------------------------------------------------------------
#--------------------------------------------------------------------------------------------------------------------

#extern "C" size_t L2Z2PHCount(MKL_INT *indptr, int num_thread);
cf_fqhe.L2Z2PHCount.argtypes = [
			np.ctypeslib.ndpointer(dtype=indtype, ndim=1,flags='C_CONTIGUOUS')]
cf_fqhe.L2Z2PHCount.restype = c_size_t
L2Z2PHCount = cf_fqhe.L2Z2PHCount

#extern "C" size_t L2Z2PHGenerate(MKL_INT *indptr, MKL_INT *indices, Data_dtype *data, int num_thread);
cf_fqhe.L2Z2PHGenerate.argtypes = [
			np.ctypeslib.ndpointer(dtype=indtype, ndim=1,flags='C_CONTIGUOUS'),
			np.ctypeslib.ndpointer(dtype=indtype, ndim=1,flags='C_CONTIGUOUS'),
			np.ctypeslib.ndpointer(dtype=gdtype, ndim=1,flags='C_CONTIGUOUS')]
cf_fqhe.L2Z2PHGenerate.restype = c_size_t
L2Z2PHGenerate = cf_fqhe.L2Z2PHGenerate

#--------------------------------------------------------------------------------------------------------------------
#---------------------------<Hamiltonian/nlm.c>--------------------------------------------------------------------
#--------------------------------------------------------------------------------------------------------------------

#extern "C" size_t n00ACount(MKL_INT *indptr, Data_dtype *A_matirx, int num_thread);
cf_fqhe.n00ACount.argtypes = [
			np.ctypeslib.ndpointer(dtype=indtype, ndim=1,flags='C_CONTIGUOUS'),
			np.ctypeslib.ndpointer(dtype=gdtype, ndim=2,flags='C_CONTIGUOUS'), c_int]
cf_fqhe.n00ACount.restype = c_size_t
n00ACount = cf_fqhe.n00ACount

#extern "C" size_t n00AGenerate(Data_dtype *A_matirx, MKL_INT *indptr, MKL_INT *indices, Data_dtype *data, int num_thread);
cf_fqhe.n00AGenerate.argtypes = [
			np.ctypeslib.ndpointer(dtype=gdtype, ndim=2,flags='C_CONTIGUOUS'),
			np.ctypeslib.ndpointer(dtype=indtype, ndim=1,flags='C_CONTIGUOUS'),
			np.ctypeslib.ndpointer(dtype=indtype, ndim=1,flags='C_CONTIGUOUS'),
			np.ctypeslib.ndpointer(dtype=gdtype, ndim=1,flags='C_CONTIGUOUS'),c_int]
cf_fqhe.n00AGenerate.restype = c_size_t
n00AGenerate = cf_fqhe.n00AGenerate


#extern "C" size_t D00ACount(MKL_INT *indptr, Data_dtype *A_matirx, Data_dtype *B_matirx, int num_thread)
cf_fqhe.D00ACount.argtypes = [
			np.ctypeslib.ndpointer(dtype=indtype, ndim=1,flags='C_CONTIGUOUS'),
			np.ctypeslib.ndpointer(dtype=gdtype, ndim=2,flags='C_CONTIGUOUS'),
			np.ctypeslib.ndpointer(dtype=gdtype, ndim=2,flags='C_CONTIGUOUS'), c_int]
cf_fqhe.n00ACount.restype = c_size_t
D00ACount = cf_fqhe.D00ACount

#extern "C" size_t D00AGenerate(Data_dtype *A_matirx, Data_dtype *B_matirx, Data_dtype *A_list, 
#								MKL_INT *indptr, MKL_INT *indices, Data_dtype *data, int num_thread)
cf_fqhe.D00AGenerate.argtypes = [
			np.ctypeslib.ndpointer(dtype=gdtype, ndim=2,flags='C_CONTIGUOUS'),
			np.ctypeslib.ndpointer(dtype=gdtype, ndim=2,flags='C_CONTIGUOUS'),
			np.ctypeslib.ndpointer(dtype=gdtype, ndim=3,flags='C_CONTIGUOUS'),
			np.ctypeslib.ndpointer(dtype=indtype, ndim=1,flags='C_CONTIGUOUS'),
			np.ctypeslib.ndpointer(dtype=indtype, ndim=1,flags='C_CONTIGUOUS'),
			np.ctypeslib.ndpointer(dtype=gdtype, ndim=1,flags='C_CONTIGUOUS'),c_int]
cf_fqhe.D00AGenerate.restype = c_size_t
D00AGenerate = cf_fqhe.D00AGenerate

#extern "C" void D00AOp(Data_dtype *A_matirx, Data_dtype *B_matirx, Data_dtype *A_list, Data_dtype *vec, Data_dtype *resu, int num_thread)
cf_fqhe.D00AOp.argtypes = [
			np.ctypeslib.ndpointer(dtype=gdtype, ndim=2,flags='C_CONTIGUOUS'),
			np.ctypeslib.ndpointer(dtype=gdtype, ndim=2,flags='C_CONTIGUOUS'),
			np.ctypeslib.ndpointer(dtype=gdtype, ndim=3,flags='C_CONTIGUOUS'),
			np.ctypeslib.ndpointer(dtype=gdtype, ndim=1,flags='C_CONTIGUOUS'),
			np.ctypeslib.ndpointer(dtype=gdtype, ndim=1,flags='C_CONTIGUOUS'),c_int]
D00AOp = cf_fqhe.D00AOp

#extern "C" void Dl0AOp(Data_dtype *A_matirx, Data_dtype *vec, Data_dtype *resu, int l, int num_thread)
cf_fqhe.nl0AOp.argtypes = [
			np.ctypeslib.ndpointer(dtype=gdtype, ndim=2,flags='C_CONTIGUOUS'),
			np.ctypeslib.ndpointer(dtype=gdtype, ndim=1,flags='C_CONTIGUOUS'),
			np.ctypeslib.ndpointer(dtype=gdtype, ndim=1,flags='C_CONTIGUOUS'),c_int,c_int]
nl0AOp = cf_fqhe.nl0AOp

#--------------------------------------------------------------------------------------------------------------------
#---------------------------<Hamiltonian/General_operators.c>--------------------------------------------------------------------
#--------------------------------------------------------------------------------------------------------------------

#extern "C" void pairingOp(Data_dtype *A_list, Data_dtype *A_matirx, Data_dtype *vec, Data_dtype *resu, int l, int m, 
#                            int daggerQ, int num_thread)
cf_fqhe.pairingOp.argtypes = [
			np.ctypeslib.ndpointer(dtype=gdtype, ndim=2,flags='C_CONTIGUOUS'),
			np.ctypeslib.ndpointer(dtype=gdtype, ndim=2,flags='C_CONTIGUOUS'),
			np.ctypeslib.ndpointer(dtype=gdtype, ndim=1,flags='C_CONTIGUOUS'),
			np.ctypeslib.ndpointer(dtype=gdtype, ndim=1,flags='C_CONTIGUOUS'),c_int,c_int,c_int,c_int]
pairingOp = cf_fqhe.pairingOp

#extern "C" int create_delta_AwithNo(double *A_list2, int l, int m, int N_o, int num_thread);
cf_fqhe.create_delta_AwithNo.argtypes = [
			np.ctypeslib.ndpointer(dtype=gdtype, ndim=2,flags='C_CONTIGUOUS'),c_int,c_int,c_int,c_int]
create_delta_AwithNo = cf_fqhe.create_delta_AwithNo

#extern "C" void pairingABlmOp(Data_dtype *A_matirx, Data_dtype *B_matirx, Data_dtype *A_list, Data_dtype *vec, Data_dtype *resu, 
#                                int l, int m, int la, int lb, int num_thread)
cf_fqhe.pairingABlmOp.argtypes = [
			np.ctypeslib.ndpointer(dtype=gdtype, ndim=2,flags='C_CONTIGUOUS'),
			np.ctypeslib.ndpointer(dtype=gdtype, ndim=2,flags='C_CONTIGUOUS'),
			np.ctypeslib.ndpointer(dtype=gdtype, ndim=4,flags='C_CONTIGUOUS'),
			np.ctypeslib.ndpointer(dtype=gdtype, ndim=1,flags='C_CONTIGUOUS'),
			np.ctypeslib.ndpointer(dtype=gdtype, ndim=1,flags='C_CONTIGUOUS'),c_int,c_int,c_int,c_int,c_int]
pairingABlmOp = cf_fqhe.pairingABlmOp

#extern "C" int create_deltadelta_ABwithNo(double *A_list2, int l, int m, int la, int lb, int N_o, int num_thread)
cf_fqhe.create_deltadelta_ABwithNo.argtypes = [
			np.ctypeslib.ndpointer(dtype=gdtype, ndim=4,flags='C_CONTIGUOUS'),
			c_int,c_int,c_int,c_int,c_int,c_int]
create_deltadelta_ABwithNo = cf_fqhe.create_deltadelta_ABwithNo

#extern "C" void twoOpGeneral(Data_dtype *A_matirx, Data_dtype *A_list, Data_dtype *vec, Data_dtype *resu, int m, int num_thread)
cf_fqhe.twoOpGeneral.argtypes = [
			np.ctypeslib.ndpointer(dtype=gdtype, ndim=2,flags='C_CONTIGUOUS'),
			np.ctypeslib.ndpointer(dtype=gdtype, ndim=2,flags='C_CONTIGUOUS'),
			np.ctypeslib.ndpointer(dtype=gdtype, ndim=1,flags='C_CONTIGUOUS'),
			np.ctypeslib.ndpointer(dtype=gdtype, ndim=1,flags='C_CONTIGUOUS'),c_int,c_int]
twoOpGeneral = cf_fqhe.twoOpGeneral

#extern "C" int create_nlm_AwithNo(double *A_list2, int l, int m, int N_o, int num_thread);
cf_fqhe.create_nlm_AwithNo.argtypes = [
			np.ctypeslib.ndpointer(dtype=gdtype, ndim=2,flags='C_CONTIGUOUS'),
			c_int,c_int,c_int,c_int]
create_nlm_AwithNo = cf_fqhe.create_nlm_AwithNo

#--------------------------------------------------------------------------------------------------------------------
#---------------------------<Basis/density.c>--------------------------------------------------------------------
#--------------------------------------------------------------------------------------------------------------------

# extern "C" int meausre_density(Data_dtype *ket, double *out);
cf_fqhe.meausre_density.argtypes = [
			np.ctypeslib.ndpointer(dtype=gdtype, ndim=1,flags='C_CONTIGUOUS'),
			np.ctypeslib.ndpointer(dtype=np.float64, ndim=1,flags='C_CONTIGUOUS')]
meausre_density = cf_fqhe.meausre_density

# extern "C" int meausre_sigma_x(Data_dtype *ket, Data_dtype *out);
cf_fqhe.meausre_sigma_x.argtypes = [
			np.ctypeslib.ndpointer(dtype=gdtype, ndim=1,flags='C_CONTIGUOUS'),
			np.ctypeslib.ndpointer(dtype=gdtype, ndim=1,flags='C_CONTIGUOUS')]
meausre_sigma_x = cf_fqhe.meausre_sigma_x

# extern "C" int meausre_Z2(Data_dtype *ket, Data_dtype *out);
cf_fqhe.meausre_Z2.argtypes = [
			np.ctypeslib.ndpointer(dtype=gdtype, ndim=1,flags='C_CONTIGUOUS'),
			np.ctypeslib.ndpointer(dtype=gdtype, ndim=1,flags='C_CONTIGUOUS')]
meausre_Z2 = cf_fqhe.meausre_Z2

# extern "C" int meausre_PH(Data_dtype *ket, Data_dtype *out);
cf_fqhe.meausre_PH.argtypes = [
			np.ctypeslib.ndpointer(dtype=gdtype, ndim=1,flags='C_CONTIGUOUS'),
			np.ctypeslib.ndpointer(dtype=gdtype, ndim=1,flags='C_CONTIGUOUS')]
meausre_PH = cf_fqhe.meausre_PH

# extern "C" int meausre_PH_inZ2space(Data_dtype *ket, Data_dtype *out);
cf_fqhe.meausre_PH_inZ2space.argtypes = [
			np.ctypeslib.ndpointer(dtype=gdtype, ndim=1,flags='C_CONTIGUOUS'),
			np.ctypeslib.ndpointer(dtype=gdtype, ndim=1,flags='C_CONTIGUOUS')]
meausre_PH_inZ2space = cf_fqhe.meausre_PH_inZ2space


#--------------------------------------------------------------------------------------------------------------------
#---------------------------<Basis/transformation.c>--------------------------------------------------------------------
#--------------------------------------------------------------------------------------------------------------------

# extern "C" void LzZ2PH_to_Lz(const Data_dtype* LzZ2PH_ket, Data_dtype* Lz_ket, int num_thread)
cf_fqhe.LzZ2PH_to_Lz.argtypes = [
			np.ctypeslib.ndpointer(dtype=gdtype, ndim=1,flags='C_CONTIGUOUS'),
			np.ctypeslib.ndpointer(dtype=gdtype, ndim=1,flags='C_CONTIGUOUS'), c_int]
LzZ2PH_to_Lz = cf_fqhe.LzZ2PH_to_Lz

#--------------------------------------------------------------------------------------------------------------------
#---------------------------<Hamiltonian/lineDefect.c>--------------------------------------------------------------------
#--------------------------------------------------------------------------------------------------------------------

#extern "C" size_t defectLineGenerate(MKL_INT *indptr, MKL_INT *indices, Data_dtype *data, double *A1_list, double *A12_list, double #*cdw, double* defect_list, double t, int num_thread);
cf_fqhe.defectLineGenerate.argtypes = [
			np.ctypeslib.ndpointer(dtype=indtype, ndim=1,flags='C_CONTIGUOUS'),
			np.ctypeslib.ndpointer(dtype=indtype, ndim=1,flags='C_CONTIGUOUS'),
			np.ctypeslib.ndpointer(dtype=gdtype, ndim=1,flags='C_CONTIGUOUS'),
			np.ctypeslib.ndpointer(dtype=np.float64, ndim=4,flags='C_CONTIGUOUS'),
			np.ctypeslib.ndpointer(dtype=np.float64, ndim=4,flags='C_CONTIGUOUS'),
			np.ctypeslib.ndpointer(dtype=np.float64, ndim=1,flags='C_CONTIGUOUS'),
			np.ctypeslib.ndpointer(dtype=np.float64, ndim=1,flags='C_CONTIGUOUS'),
			c_double, c_int]
cf_fqhe.defectLineGenerate.restype = c_size_t
defectLineGenerate = cf_fqhe.defectLineGenerate